--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,3 +32,10 @@ footer {
     padding: 1em;
     justify-content: space-between;
 }
+.marker {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
